--- a/.github/workflows/ubuntu-latest-info-workflow.yaml
+++ b/.github/workflows/ubuntu-latest-info-workflow.yaml
@@ -9,6 +9,8 @@ jobs:
         with:
           token: ${{ secrets.STUDIO_GITHUB_TOKEN }}
       - uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: 2.6
       - run: gem install facter
       - run: pwd
       - run: facter --yaml
