--- a/.github/workflows/github-actions-ubuntu-20.04-workflow.yaml
+++ b/.github/workflows/github-actions-ubuntu-20.04-workflow.yaml
@@ -16,6 +16,8 @@ jobs:
       - run: facter --yaml > data/github-actions/ubuntu-20.04.yaml
       - run: git config --global user.email "pakkun@cliffano.com"
       - run: git config --global user.name "pakkunbot"
+      - run: git add -A
+      - run: git commit -am "Update GitHub Actions Ubuntu 20.04 data."
       - uses: ad-m/github-push-action@master
         with:
           tags: true
