--- a/.github/workflows/github-actions-macos-latest-workflow.yaml
+++ b/.github/workflows/github-actions-macos-latest-workflow.yaml
@@ -18,6 +18,7 @@ jobs:
       - run: git config --global user.name "pakkunbot"
       - run: git add -A
       - run: git commit -am "Update GitHub Actions macOS latest data."
+      - run: git pull --rebase
       - uses: ad-m/github-push-action@master
         with:
           tags: true
