Restructure data file location. Add hocon and json formats.

--- a/.github/workflows/github-actions-macos-11.0-workflow.yaml
+++ b/.github/workflows/github-actions-macos-11.0-workflow.yaml
@@ -13,7 +13,9 @@ jobs:
           ruby-version: 3.1.1
       - run: gem install facter
       - run: mkdir -p data/github-actions/
-      - run: facter --yaml > data/github-actions/macos-11.0.yaml
+      - run: facter --hocon > data/github-actions/macos-11.0/facter.hocon
+      - run: facter --json > data/github-actions/macos-11.0/facter.json
+      - run: facter --yaml > data/github-actions/macos-11.0/facter.yaml
       - run: git config --global user.email "pakkun@cliffano.com"
       - run: git config --global user.name "pakkunbot"
       - run: git add -A
