Try running facter without bash shell.

--- a/.github/workflows/github-actions-windows-latest-workflow.yaml
+++ b/.github/workflows/github-actions-windows-latest-workflow.yaml
@@ -13,12 +13,9 @@ jobs:
           ruby-version: 3.1.1
       - run: gem install facter
       - run: md data/github-actions/windows-latest/ -ea 0
-      - run: facter --hocon > data/github-actions/windows-latest/facter.hocon
-        shell: bash
-      - run: facter --json > data/github-actions/windows-latest/facter.json
-        shell: bash
-      - run: facter --yaml > data/github-actions/windows-latest/facter.yaml
-        shell: bash
+      - run: facter --hocon
+      - run: facter --json
+      - run: facter --yaml
       - run: git config --global user.email "pakkun@cliffano.com"
       - run: git config --global user.name "pakkunbot"
       - run: git add -A
