--- a/.github/workflows/github-actions-all-runners-workflow.yaml
+++ b/.github/workflows/github-actions-all-runners-workflow.yaml
@@ -3,36 +3,77 @@ name: All GitHub Actions runners system info
 on: [workflow_dispatch]
 env:
   RUBY_VERSION: 3.1.1
+  GIT_USER_EMAIL: pakkun@cliffano.com
+  GIT_USER_NAME: pakkunbot
 jobs:
-  prepare:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-        with:
-          token: ${{ secrets.STUDIO_GITHUB_TOKEN }}
-      - run: git config --global user.email "pakkun@cliffano.com"
-      - run: git config --global user.name "pakkunbot"
   ubuntu-latest:
-    needs: prepare
     runs-on: ubuntu-latest
     steps:
       - uses: ruby/setup-ruby@v1
         with:
           ruby-version: ${{ env.RUBY_VERSION }}
       - run: gem install facter
+      - uses: actions/checkout@v3
+        with:
+          token: ${{ secrets.STUDIO_GITHUB_TOKEN }}
+      - run: git config --global user.email "${{ env.GIT_USER_EMAIL }}"
+      - run: git config --global user.name "${{ env.GIT_USER_NAME }}"
+      - run: git checkout -b github-actions-ubuntu-latest
+      - run: git merge main
       - run: mkdir -p data/github-actions/ubuntu-latest/
       - run: facter --hocon > data/github-actions/ubuntu-latest/facter.hocon
       - run: facter --json > data/github-actions/ubuntu-latest/facter.json
       - run: facter --yaml > data/github-actions/ubuntu-latest/facter.yaml
-      - run: git add data/github-actions/ubuntu-latest/*.*
-      - run: git commit data/github-actions/ubuntu-latest/*.* -m "Update GitHub Actions Ubuntu latest data."
-  update:
-    needs: ubuntu-latest
-    runs-on: ubuntu-latest
-    steps:
+      - run: git add -A
+      - run: git commit -am "Update GitHub Actions Ubuntu latest data."
       - run: git pull --rebase
       - uses: ad-m/github-push-action@master
         with:
           tags: true
           github_token: ${{ secrets.STUDIO_GITHUB_TOKEN }}
+          branch: github-actions-ubuntu-latest
+  macos-latest:
+    runs-on: macos-latest
+    steps:
+      - uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: ${{ env.RUBY_VERSION }}
+      - run: gem install facter
+      - uses: actions/checkout@v3
+        with:
+          token: ${{ secrets.STUDIO_GITHUB_TOKEN }}
+      - run: git config --global user.email "${{ env.GIT_USER_EMAIL }}"
+      - run: git config --global user.name "${{ env.GIT_USER_NAME }}"
+      - run: git checkout -b github-actions-macos-latest
+      - run: git merge main
+      - run: mkdir -p data/github-actions/macos-latest/
+      - run: facter --hocon > data/github-actions/macos-latest/facter.hocon
+      - run: facter --json > data/github-actions/macos-latest/facter.json
+      - run: facter --yaml > data/github-actions/macos-latest/facter.yaml
+      - run: git add -A
+      - run: git commit -am "Update GitHub Actions macOS latest data."
+      - run: git pull --rebase
+      - uses: ad-m/github-push-action@master
+        with:
+          tags: true
+          github_token: ${{ secrets.STUDIO_GITHUB_TOKEN }}
+          branch: github-actions-macos-latest
+  consolidate:
+    needs:
+      - ubuntu-latest
+      - macos-latest
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          token: ${{ secrets.STUDIO_GITHUB_TOKEN }}
+      - run: git config --global user.email "${{ env.GIT_USER_EMAIL }}"
+      - run: git config --global user.name "${{ env.GIT_USER_NAME }}"
+      - run: git merge github-actions-ubuntu-latest
+      - run: git merge github-actions-macos-latest
+      - uses: ad-m/github-push-action@master
+        with:
+          tags: true
+          github_token: ${{ secrets.STUDIO_GITHUB_TOKEN }}
           branch: ${{ github.ref }}
+
