--- a/.github/workflows/github-actions-all-runners-workflow.yaml
+++ b/.github/workflows/github-actions-all-runners-workflow.yaml
@@ -67,8 +67,8 @@ jobs:
           token: ${{ secrets.STUDIO_GITHUB_TOKEN }}
       - run: git config --global user.email "${{ env.GIT_USER_EMAIL }}"
       - run: git config --global user.name "${{ env.GIT_USER_NAME }}"
-      - run: git merge github-actions-ubuntu-latest
-      - run: git merge github-actions-macos-latest
+      - run: git checkout github-actions-ubuntu-latest && git checkout main && git merge github-actions-ubuntu-latest
+      - run: git checkout github-actions-macos-latest && git checkout main && git merge github-actions-macos-latest
       - uses: ad-m/github-push-action@master
         with:
           tags: true
