--- a/.github/workflows/github-actions-self-hosted-runners-workflow.yaml
+++ b/.github/workflows/github-actions-self-hosted-runners-workflow.yaml
@@ -21,7 +21,7 @@ jobs:
         with:
           name: ubuntu-latest-facter
           path: data/
-  ubuntu-20.04:
+  ubuntu-20_04:
     runs-on: ubuntu-20.04
     steps:
       - uses: ruby/setup-ruby@master
@@ -36,7 +36,7 @@ jobs:
         with:
           name: ubuntu-20.04-facter
           path: data/
-  ubuntu-18.04:
+  ubuntu-18_04:
     runs-on: ubuntu-18.04
     steps:
       - uses: ruby/setup-ruby@master
@@ -51,7 +51,7 @@ jobs:
         with:
           name: ubuntu-18.04-facter
           path: data/
-  ubuntu-16.04:
+  ubuntu-16_04:
     runs-on: ubuntu-16.04
     steps:
       - uses: ruby/setup-ruby@master
@@ -81,7 +81,7 @@ jobs:
         with:
           name: macos-latest-facter
           path: data/
-  macos-11.0:
+  macos-11_0:
     runs-on: macos-11.0
     steps:
       - uses: ruby/setup-ruby@master
@@ -96,7 +96,7 @@ jobs:
         with:
           name: macos-11.0-facter
           path: data/
-  macos-10.15:
+  macos-10_15:
     runs-on: macos-10.15
     steps:
       - uses: ruby/setup-ruby@master
@@ -159,12 +159,12 @@ jobs:
   consolidate:
     needs:
       - ubuntu-latest
-      - ubuntu-20.04
-      - ubuntu-18.04
-      - ubuntu-16.04
+      - ubuntu-20_04
+      - ubuntu-18_04
+      - ubuntu-16_04
       - macos-latest
-      - macos-11.0
-      - macos-10.15
+      - macos-11_0
+      - macos-10_15
       - windows-latest
       - windows-2022
       - windows-2019
