--- a/.github/workflows/github-actions-self-hosted-runners-workflow.yaml
+++ b/.github/workflows/github-actions-self-hosted-runners-workflow.yaml
@@ -51,21 +51,6 @@ jobs:
         with:
           name: ubuntu-18.04-facter
           path: data/
-  ubuntu-16_04:
-    runs-on: ubuntu-16.04
-    steps:
-      - uses: ruby/setup-ruby@master
-        with:
-          ruby-version: ${{ env.RUBY_VERSION }}
-      - run: gem install facter
-      - run: mkdir -p data
-      - run: facter --hocon > data/facter.hocon
-      - run: facter --json > data/facter.json
-      - run: facter --yaml > data/facter.yaml
-      - uses: actions/upload-artifact@master
-        with:
-          name: ubuntu-16.04-facter
-          path: data/
   macos-latest:
     runs-on: macos-latest
     steps:
@@ -156,18 +141,33 @@ jobs:
         with:
           name: windows-2019-facter
           path: data/
+  windows-2016:
+    runs-on: windows-2016
+    steps:
+      - uses: ruby/setup-ruby@master
+        with:
+          ruby-version: ${{ env.RUBY_VERSION }}
+      - run: gem install ffi facter
+      - run: md data/github-actions/windows-2016/ -ea 0
+      - run: facter --hocon | Out-File data/facter.hocon
+      - run: facter --json | Out-File data/facter.json
+      - run: facter --yaml | Out-File data/facter.yaml
+      - uses: actions/upload-artifact@master
+        with:
+          name: windows-2016-facter
+          path: data/
   consolidate:
     needs:
       - ubuntu-latest
       - ubuntu-20_04
       - ubuntu-18_04
-      - ubuntu-16_04
       - macos-latest
       - macos-11_0
       - macos-10_15
       - windows-latest
       - windows-2022
       - windows-2019
+      - windows-2016
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -190,11 +190,6 @@ jobs:
         with:
           name: ubuntu-18.04-facter
           path: data/github-actions/ubuntu-18.04/
-      - run: rm -rf data/github-actions/ubuntu-16.04/*
-      - uses: actions/download-artifact@master
-        with:
-          name: ubuntu-16.04-facter
-          path: data/github-actions/ubuntu-16.04/
       - run: rm -rf data/github-actions/macos-latest/*
       - uses: actions/download-artifact@master
         with:
@@ -225,17 +220,22 @@ jobs:
         with:
           name: windows-2019-facter
           path: data/github-actions/windows-2019/
+      - run: rm -rf data/github-actions/windows-2016/*
+      - uses: actions/download-artifact@master
+        with:
+          name: windows-2016-facter
+          path: data/github-actions/windows-2016/
       - run: git add -A
       - run: git commit data/github-actions/ubuntu-latest/* -m "Update GitHub Actions Ubuntu latest data."
       - run: git commit data/github-actions/ubuntu-20.04/* -m "Update GitHub Actions Ubuntu 20.04 data."
       - run: git commit data/github-actions/ubuntu-18.04/* -m "Update GitHub Actions Ubuntu 18.04 data."
-      - run: git commit data/github-actions/ubuntu-16.04/* -m "Update GitHub Actions Ubuntu 16.04 data."
       - run: git commit data/github-actions/macos-latest/* -m "Update GitHub Actions macOS latest data."
       - run: git commit data/github-actions/macos-11.0/* -m "Update GitHub Actions macOS 11.0 data."
       - run: git commit data/github-actions/macos-10.15/* -m "Update GitHub Actions macOS 10.15 data."
       - run: git commit data/github-actions/windows-latest/* -m "Update GitHub Actions Windows latest data."
       - run: git commit data/github-actions/windows-2022/* -m "Update GitHub Actions Windows 2022 data."
       - run: git commit data/github-actions/windows-2019/* -m "Update GitHub Actions Windows 2019 data."
+      - run: git commit data/github-actions/windows-2016/* -m "Update GitHub Actions Windows 2016 data."
       - run: git pull --rebase
       - uses: ad-m/github-push-action@master
         with:
