--- a/.github/workflows/github-actions-github-hosted-runners-workflow.yaml
+++ b/.github/workflows/github-actions-github-hosted-runners-workflow.yaml
@@ -3,7 +3,7 @@ name: GitHub Actions GitHub-hosted runners system info
 on: [workflow_dispatch]
 env:
   RUBY_VERSION: 3.1.1
-  GIT_USER_EMAIL: pakkun@cliffano.com
+  GIT_USER_EMAIL: blah+pakkun@cliffano.com
   GIT_USER_NAME: pakkunbot
 jobs:
   ubuntu-latest:
