--- a/.github/workflows/aws-lambda-runtimes-via-github-actions-workflow.yaml
+++ b/.github/workflows/aws-lambda-runtimes-via-github-actions-workflow.yaml
@@ -1,5 +1,5 @@
 ---
-name: AWS Lambda runtimes system info
+name: AWS Lambda runtimes system info via GitHub Actions
 on: [workflow_dispatch]
 env:
   GIT_USER_EMAIL: blah+pakkun@cliffano.com
@@ -29,13 +29,13 @@ jobs:
           token: ${{ secrets.STUDIO_GITHUB_TOKEN }}
       - run: git config --global user.email "${{ env.GIT_USER_EMAIL }}"
       - run: git config --global user.name "${{ env.GIT_USER_NAME }}"
-      - run: rm -rf data/aws-lambda-runtimes/ruby-latest/*
+      - run: rm -rf data/aws-lambda-runtimes-via-github-actions/ruby-latest/*
       - uses: actions/download-artifact@master
         with:
           name: ruby-latest-facter
-          path: data/aws-lambda-runtimes/ruby-latest/
+          path: data/aws-lambda-runtimes-via-github-actions/ruby-latest/
       - run: git add -A
-      - run: git commit data/aws-lambda-runtimes/ruby-latest/* -m "Update AWS Lambda Runtime Ruby latest data."
+      - run: git commit data/aws-lambda-runtimes-via-github-actions/ruby-latest/* -m "Update data for AWS Lambda Runtime Ruby latest via GitHub Actions."
       - run: git pull --rebase
       - uses: ad-m/github-push-action@master
         with:
