Add AWS Lambda runtimes 3.2, 2.7, 2.5 .

--- a/.github/workflows/github-actions-aws-lambda-runtimes-workflow.yaml
+++ b/.github/workflows/github-actions-aws-lambda-runtimes-workflow.yaml
@@ -33,6 +33,20 @@ jobs:
         with:
           name: ruby-3-facter
           path: data/
+  ruby-3.2:
+    runs-on: ubuntu-latest
+    container:
+      image: public.ecr.aws/lambda/ruby:3.2
+    steps:
+      - run: gem install facter
+      - run: mkdir -p data
+      - run: facter --hocon > data/facter.hocon
+      - run: facter --json > data/facter.json
+      - run: facter --yaml > data/facter.yaml
+      - uses: actions/upload-artifact@master
+        with:
+          name: ruby-3.2-facter
+          path: data/
   ruby-2:
     runs-on: ubuntu-latest
     container:
@@ -46,6 +60,34 @@ jobs:
       - uses: actions/upload-artifact@master
         with:
           name: ruby-2-facter
+          path: data/
+  ruby-2.7:
+    runs-on: ubuntu-latest
+    container:
+      image: public.ecr.aws/lambda/ruby:2.7
+    steps:
+      - run: gem install facter
+      - run: mkdir -p data
+      - run: facter --hocon > data/facter.hocon
+      - run: facter --json > data/facter.json
+      - run: facter --yaml > data/facter.yaml
+      - uses: actions/upload-artifact@master
+        with:
+          name: ruby-2.7-facter
+          path: data/
+  ruby-2.5:
+    runs-on: ubuntu-latest
+    container:
+      image: public.ecr.aws/lambda/ruby:2.5
+    steps:
+      - run: gem install facter
+      - run: mkdir -p data
+      - run: facter --hocon > data/facter.hocon
+      - run: facter --json > data/facter.json
+      - run: facter --yaml > data/facter.yaml
+      - uses: actions/upload-artifact@master
+        with:
+          name: ruby-2.5-facter
           path: data/
   consolidate:
     needs:
@@ -73,7 +115,10 @@ jobs:
       - run: git add -A
       - run: git commit data/github-actions-aws-lambda-runtimes/ruby-latest/* -m "Update data for AWS Lambda Runtime Ruby latest via GitHub Actions."
       - run: git commit data/github-actions-aws-lambda-runtimes/ruby-3/* -m "Update data for AWS Lambda Runtime Ruby 3 via GitHub Actions."
+      - run: git commit data/github-actions-aws-lambda-runtimes/ruby-3.2/* -m "Update data for AWS Lambda Runtime Ruby 3.2 via GitHub Actions."
       - run: git commit data/github-actions-aws-lambda-runtimes/ruby-2/* -m "Update data for AWS Lambda Runtime Ruby 2 via GitHub Actions."
+      - run: git commit data/github-actions-aws-lambda-runtimes/ruby-2.7/* -m "Update data for AWS Lambda Runtime Ruby 2.7 via GitHub Actions."
+      - run: git commit data/github-actions-aws-lambda-runtimes/ruby-2.5/* -m "Update data for AWS Lambda Runtime Ruby 2.5 via GitHub Actions."
       - run: git pull --rebase
       - uses: ad-m/github-push-action@master
         with:
