--- a/.github/workflows/github-actions-aws-lambda-runtimes-workflow.yaml
+++ b/.github/workflows/github-actions-aws-lambda-runtimes-workflow.yaml
@@ -110,8 +110,20 @@ jobs:
           path: data/github-actions-aws-lambda-runtimes/ruby-3/
       - uses: actions/download-artifact@master
         with:
+          name: ruby-3.2-facter
+          path: data/github-actions-aws-lambda-runtimes/ruby-3.2/
+      - uses: actions/download-artifact@master
+        with:
           name: ruby-2-facter
           path: data/github-actions-aws-lambda-runtimes/ruby-2/
+      - uses: actions/download-artifact@master
+        with:
+          name: ruby-2.7-facter
+          path: data/github-actions-aws-lambda-runtimes/ruby-2.7/
+      - uses: actions/download-artifact@master
+        with:
+          name: ruby-2.5-facter
+          path: data/github-actions-aws-lambda-runtimes/ruby-2.5/
       - run: git add -A
       - run: git commit data/github-actions-aws-lambda-runtimes/ruby-latest/* -m "Update data for AWS Lambda Runtime Ruby latest via GitHub Actions."
       - run: git commit data/github-actions-aws-lambda-runtimes/ruby-3/* -m "Update data for AWS Lambda Runtime Ruby 3 via GitHub Actions."
