--- a/.github/workflows/github-actions-rockylinux-workflow.yaml
+++ b/.github/workflows/github-actions-rockylinux-workflow.yaml
@@ -43,7 +43,8 @@ jobs:
 
   consolidate:
     needs:
-      - ruby-latest
+      - rockylinux-8
+      - rockylinux-9
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
