Add ruby install via yum.

--- a/.github/workflows/github-actions-rockylinux-workflow.yaml
+++ b/.github/workflows/github-actions-rockylinux-workflow.yaml
@@ -2,6 +2,7 @@
 name: Rocky Linux system info via GitHub Actions
 on: [workflow_dispatch]
 env:
+  RUBY_VERSION: 3.1
   GIT_USER_EMAIL: blah+pakkun@cliffano.com
   GIT_USER_NAME: pakkunbot
 jobs:
@@ -10,6 +11,7 @@ jobs:
     container:
       image: rockylinux:8
     steps:
+      - run: yum install -y @ruby:${{ env.RUBY_VERSION }}
       - run: gem install facter
       - run: mkdir -p data
       - run: facter --hocon > data/facter.hocon
@@ -24,6 +26,7 @@ jobs:
     container:
       image: rockylinux:9
     steps:
+      - run: yum install -y @ruby:${{ env.RUBY_VERSION }}
       - run: gem install facter
       - run: mkdir -p data
       - run: facter --hocon > data/facter.hocon
