--- a/.github/workflows/github-actions-github-hosted-runners-workflow.yaml
+++ b/.github/workflows/github-actions-github-hosted-runners-workflow.yaml
@@ -21,6 +21,21 @@ jobs:
         with:
           name: ubuntu-latest-facter
           path: data/
+  ubuntu-22_04:
+    runs-on: ubuntu-22.04
+    steps:
+      - uses: ruby/setup-ruby@master
+        with:
+          ruby-version: ${{ env.RUBY_VERSION }}
+      - run: gem install facter
+      - run: mkdir -p data
+      - run: facter --hocon > data/facter.hocon
+      - run: facter --json > data/facter.json
+      - run: facter --yaml > data/facter.yaml
+      - uses: actions/upload-artifact@master
+        with:
+          name: ubuntu-22.04-facter
+          path: data/
   ubuntu-20_04:
     runs-on: ubuntu-20.04
     steps:
@@ -35,21 +50,6 @@ jobs:
       - uses: actions/upload-artifact@master
         with:
           name: ubuntu-20.04-facter
-          path: data/
-  ubuntu-18_04:
-    runs-on: ubuntu-18.04
-    steps:
-      - uses: ruby/setup-ruby@master
-        with:
-          ruby-version: ${{ env.RUBY_VERSION }}
-      - run: gem install facter
-      - run: mkdir -p data
-      - run: facter --hocon > data/facter.hocon
-      - run: facter --json > data/facter.json
-      - run: facter --yaml > data/facter.yaml
-      - uses: actions/upload-artifact@master
-        with:
-          name: ubuntu-18.04-facter
           path: data/
   macos-latest:
     runs-on: macos-latest
@@ -66,8 +66,8 @@ jobs:
         with:
           name: macos-latest-facter
           path: data/
-  macos-11_0:
-    runs-on: macos-11.0
+  macos-14:
+    runs-on: macos-14
     steps:
       - uses: ruby/setup-ruby@master
         with:
@@ -79,10 +79,10 @@ jobs:
       - run: facter --yaml > data/facter.yaml
       - uses: actions/upload-artifact@master
         with:
-          name: macos-11.0-facter
+          name: macos-14-facter
           path: data/
-  macos-10_15:
-    runs-on: macos-10.15
+  macos-13:
+    runs-on: macos-13
     steps:
       - uses: ruby/setup-ruby@master
         with:
@@ -94,7 +94,37 @@ jobs:
       - run: facter --yaml > data/facter.yaml
       - uses: actions/upload-artifact@master
         with:
-          name: macos-10.15-facter
+          name: macos-13-facter
+          path: data/
+  macos-12:
+    runs-on: macos-12
+    steps:
+      - uses: ruby/setup-ruby@master
+        with:
+          ruby-version: ${{ env.RUBY_VERSION }}
+      - run: gem install facter
+      - run: mkdir -p data
+      - run: facter --hocon > data/facter.hocon
+      - run: facter --json > data/facter.json
+      - run: facter --yaml > data/facter.yaml
+      - uses: actions/upload-artifact@master
+        with:
+          name: macos-12-facter
+          path: data/
+  macos-11:
+    runs-on: macos-11
+    steps:
+      - uses: ruby/setup-ruby@master
+        with:
+          ruby-version: ${{ env.RUBY_VERSION }}
+      - run: gem install facter
+      - run: mkdir -p data
+      - run: facter --hocon > data/facter.hocon
+      - run: facter --json > data/facter.json
+      - run: facter --yaml > data/facter.yaml
+      - uses: actions/upload-artifact@master
+        with:
+          name: macos-11-facter
           path: data/
   windows-latest:
     runs-on: windows-latest
@@ -144,11 +174,13 @@ jobs:
   consolidate:
     needs:
       - ubuntu-latest
+      - ubuntu-22_04
       - ubuntu-20_04
-      - ubuntu-18_04
       - macos-latest
-      - macos-11_0
-      - macos-10_15
+      - macos-14
+      - macos-13
+      - macos-12
+      - macos-11
       - windows-latest
       - windows-2022
       - windows-2019
@@ -164,31 +196,41 @@ jobs:
         with:
           name: ubuntu-latest-facter
           path: data/github-actions-github-hosted-runners/ubuntu-latest/
+      - run: rm -rf data/github-actions-github-hosted-runners/ubuntu-22.04/*
+      - uses: actions/download-artifact@master
+        with:
+          name: ubuntu-22.04-facter
+          path: data/github-actions-github-hosted-runners/ubuntu-22.04/
       - run: rm -rf data/github-actions-github-hosted-runners/ubuntu-20.04/*
       - uses: actions/download-artifact@master
         with:
           name: ubuntu-20.04-facter
           path: data/github-actions-github-hosted-runners/ubuntu-20.04/
-      - run: rm -rf data/github-actions-github-hosted-runners/ubuntu-18.04/*
-      - uses: actions/download-artifact@master
-        with:
-          name: ubuntu-18.04-facter
-          path: data/github-actions-github-hosted-runners/ubuntu-18.04/
       - run: rm -rf data/github-actions-github-hosted-runners/macos-latest/*
       - uses: actions/download-artifact@master
         with:
           name: macos-latest-facter
           path: data/github-actions-github-hosted-runners/macos-latest/
-      - run: rm -rf data/github-actions-github-hosted-runners/macos-11.0/*
+      - run: rm -rf data/github-actions-github-hosted-runners/macos-14/*
       - uses: actions/download-artifact@master
         with:
-          name: macos-11.0-facter
-          path: data/github-actions-github-hosted-runners/macos-11.0/
-      - run: rm -rf data/github-actions-github-hosted-runners/macos-10.15/*
+          name: macos-14-facter
+          path: data/github-actions-github-hosted-runners/macos-14/
+      - run: rm -rf data/github-actions-github-hosted-runners/macos-13/*
       - uses: actions/download-artifact@master
         with:
-          name: macos-10.15-facter
-          path: data/github-actions-github-hosted-runners/macos-10.15/
+          name: macos-13-facter
+          path: data/github-actions-github-hosted-runners/macos-13/
+      - run: rm -rf data/github-actions-github-hosted-runners/macos-12/*
+      - uses: actions/download-artifact@master
+        with:
+          name: macos-12-facter
+          path: data/github-actions-github-hosted-runners/macos-12/
+      - run: rm -rf data/github-actions-github-hosted-runners/macos-11/*
+      - uses: actions/download-artifact@master
+        with:
+          name: macos-11-facter
+          path: data/github-actions-github-hosted-runners/macos-11/
       - run: rm -rf data/github-actions-github-hosted-runners/windows-latest/*
       - uses: actions/download-artifact@master
         with:
@@ -206,11 +248,13 @@ jobs:
           path: data/github-actions-github-hosted-runners/windows-2019/
       - run: git add -A
       - run: git commit data/github-actions-github-hosted-runners/ubuntu-latest/* -m "Update data for GitHub Actions Ubuntu latest via GitHub Actions."
+      - run: git commit data/github-actions-github-hosted-runners/ubuntu-22.04/* -m "Update data for GitHub Actions Ubuntu 22.04 via GitHub Actions."
       - run: git commit data/github-actions-github-hosted-runners/ubuntu-20.04/* -m "Update data for GitHub Actions Ubuntu 20.04 via GitHub Actions."
-      - run: git commit data/github-actions-github-hosted-runners/ubuntu-18.04/* -m "Update data for GitHub Actions Ubuntu 18.04 via GitHub Actions."
       - run: git commit data/github-actions-github-hosted-runners/macos-latest/* -m "Update data for GitHub Actions macOS latest via GitHub Actions."
-      - run: git commit data/github-actions-github-hosted-runners/macos-11.0/* -m "Update data for GitHub Actions macOS 11.0 via GitHub Actions."
-      - run: git commit data/github-actions-github-hosted-runners/macos-10.15/* -m "Update data for GitHub Actions macOS 10.15 via GitHub Actions."
+      - run: git commit data/github-actions-github-hosted-runners/macos-14/* -m "Update data for GitHub Actions macOS 14 via GitHub Actions."
+      - run: git commit data/github-actions-github-hosted-runners/macos-13/* -m "Update data for GitHub Actions macOS 13 via GitHub Actions."
+      - run: git commit data/github-actions-github-hosted-runners/macos-12/* -m "Update data for GitHub Actions macOS 12 via GitHub Actions."
+      - run: git commit data/github-actions-github-hosted-runners/macos-11/* -m "Update data for GitHub Actions macOS 11 via GitHub Actions."
       - run: git commit data/github-actions-github-hosted-runners/windows-latest/* -m "Update data for GitHub Actions Windows latest via GitHub Actions."
       - run: git commit data/github-actions-github-hosted-runners/windows-2022/* -m "Update data for GitHub Actions Windows 2022 via GitHub Actions."
       - run: git commit data/github-actions-github-hosted-runners/windows-2019/* -m "Update data for GitHub Actions Windows 2019 via GitHub Actions."
